🗃 docs(readme.md): Adicionado arquivo de documentação do projeto 🔃refactor(index.html): Correção ortográfica ➕chore(style.css): Adicionado alteração a fonte da página.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <body>
     <img src="" alt="" />
-    <input type="text" placeholder="Enter to url or text" />
+    <input type="text" placeholder="Enter url or text" />
     <button id="button">Gerar</button>
 
     <script src="./script.js"></script>
