Adicionado button de download, do QRCODE

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
   <body>
     <img src="" alt="" />
     <input type="text" placeholder="Enter url or text" />
-    <button id="button">Gerar</button>
+    <div>
+      <button class="button" id="generate">Gerar</button>
+      <button class="button" id="download">Download</button>
+    </div>
 
     <script src="./script.js"></script>
   </body>
